@@ -29,21 +29,15 @@
 
 // Qt includes
 
-#include <QUrl>
-#include <QList>
-#include <QMap>
+#include <QNetworkReply>
 #include <QString>
+#include <QList>
+#include <QUrl>
+#include <QMap>
 
 // Local includes
 
 #include "backend-rg.h"
-
-namespace KIO
-{
-    class Job;
-}
-
-class KJob;
 
 namespace Digikam
 {
@@ -67,8 +61,7 @@ public:
 private Q_SLOTS:
 
     void nextPhoto();
-    void dataIsHere(KIO::Job* kJob, const QByteArray &);
-    void slotResult(KJob* kJob);
+    void slotFinished(QNetworkReply* reply);
 
 private:
 
